fixed issue where confirmation modal was not centered in safari

--- a/src/style.css
+++ b/src/style.css
@@ -605,8 +605,9 @@ button:disabled {
 }
 
 .confirmation-modal-container {
-  display: grid;
-  place-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   position: fixed;
   inset: 0;
 }
